# tauri-cli

./: Cargo.toml  pixi.toml
.cargo/: config.toml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
service/: Cargo.toml
service/src/: lib.rs  main.rs
src-tauri/: Cargo.toml  Info.plist  Tauri.toml
src-tauri/capabilities/: desktop.json
src-tauri/files/: nodevisa
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  service.rs
