[package]
name = "nv"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "nv"
path = "src/main.rs"

[[bin]]
name = "nodevisa"
path = "bin/nodevisa.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "desktop_lib"

[build-dependencies]
tauri-build = { version = "2", features = ["config-toml"] }

[dependencies]
cli = { workspace = true }
service = { workspace = true }
clap = { workspace = true, features = ["derive"] }

serde_json = "*"
tauri = { version = "2", features = ["tray-icon", "config-toml"] }
tauri-plugin-shell = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "*", features = ["Win32_System_Console"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "*", features = ["signal"] }
